--- 3.0.4 2007/05/21

Fixed bug in character set conversion of BER strings. Bug introduced
in 3.0.0.

--- 3.0.2 2007/05/08

For OIDs use Odr_oid type everywhere, i.e. do not assume Odr_oid=int.

For OID class, use oid_class consistently.

Fixed external handling for SUTRS and Explain records (bug appeared in 3.0
series).

Added partial support for ISO5428-1984, which is the "Greek alphabet coded
character set for bibliographic information interchange". By Giannis Kosmas.

Added documentation on new OID API.

--- 3.0.0 2007/05/02

Changes to generic frontend server interface: added new member
'query_charset' for bend_initrequest structure. A backend init handler
should set this member to its native character set for query terms.
When defined, the frontend server logic will announce this character set
to a client if the negotiationModel bit is set by the client. All server
implementors are encouraged to specify this. If a backend server does not
specify this a warning is issued using yaz_log(YLOG_WARN,..).

Added CCL utility to remove terms (stop words) from resulting RPN
tree. This is handled by functions with prefix ccl_stop_words_ .

New ZOOM C option, "rpnCharset", which allows client-side conversion of
terms in RPN queries.

Clean-up the CCL API. Moved some internal structures from ccl.h to 
private header cclp.h. Changed ccl_parser_create so that a Bibset must
be supplied. Removed tokenize API from ccl.h - including ccl_parser_find.
This is replaced by ccl_parser_find_str which takes a string instead.

Split YAZ library into two libs : libyaz.la and libyaz_server.la.
libyaz.la is the core of YAZ except the generic frontend server and
does not depend on POSIX threads anymore. libyaz_server.la is the
generic frontend server facilities and uses POSIX thread functionality
if available. The libyaz.la no longer depends on POSIX threads because
the number of global structures is limited. NMEM no longer re-uses blocks